[tool.poetry]
name = "shioajicaller"
version = "0.3.0.1"
description = "shioaj warp caller"
authors = ["Steve Lo <info@sd.idv.tw>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
shioaji = "^0.3.6.dev5"
python-dotenv = "^0.19.0"
redis = "^3.5.3"
websockets = "^10.0"
aioredis = "2.0.0"
gmqtt = "^0.6.10"
orjson = "^3.8.0"
uvloop = {version = "^0.17.0", platform = "linux"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
shioajicaller = "shioajicaller.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
