[tool.poetry]
name = "shioajicaller"
version = "0.4.2.3"
description = "shioaj warp caller"
authors = ["Steve Lo <info@sd.idv.tw>"]
license = "MIT"
repository = "https://github.com/SDpower/shioajicaller"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
shioaji = {extras = ["speed"], version = "^1.2.5"}
python-dotenv = "^0.19.0"
redis = "^5.2.0"
websockets = "^13.0"
gmqtt = "^0.6.16"
orjson = "^3.9.2"
uvloop = {version = "^0.21.0", platform = "linux"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
shioajicaller = "shioajicaller.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
